fix : store count mobile gap issue

--- a/assets/storecount.css
+++ b/assets/storecount.css
@@ -56,4 +56,7 @@
   .store-count-heading{
     margin-bottom: 2.4rem;
   }
+  .store-gap{
+    gap: 2.4rem;
+  }
 }
